# dnsPractice

./: .env  .travis.yml  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  mediator.rs  provider.rs  resolver.rs
derive/: Cargo.toml
derive/examples/: derives.rs
derive/src/: lib.rs
postgres/: Cargo.toml
postgres/src/: lib.rs
script/: create_table.sql  start_postgres.sh
src/: collator.rs  config.rs  handlers.rs  models.rs  server.rs  serverMain.rs
